syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.auth";
option java_outer_classname = "AuthProto";

package auth;

service AuthService {
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc RefreshToken (RefreshRequest) returns (RefreshResponse);
    rpc Logout (LogoutRequest) returns (LogoutResponse);
    rpc SecureEndpoint (SecureRequest) returns (SecureResponse);
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string access_token = 1;
    string refresh_token = 2;
    int64 expires_in = 3;
}

message RefreshRequest {
    string refresh_token = 1;
}

message RefreshResponse {
    string access_token = 1;
    int64 expires_in = 2;
}

message LogoutRequest {
    string refresh_token = 1;
}

message LogoutResponse {
    bool success = 1;
}

message SecureRequest {
    string message = 1;
}

message SecureResponse {
    string message = 1;
    string user_info = 2;
}